# otfcc-lib_cmake

./: CMakeLists.txt
dep/: CMakeLists.txt
dep/intl/: CMakeLists.txt
incl/otfcc/internal/: font.h  glyph-order.h  handle.h  logger.h  sfnt-builder.h
incl/otfcc/internal/caryll/: element.h  vector.h
incl/otfcc/internal/table/: CFF.h  CPAL.h  OS_2.h  SVG.h  VDMX.h  _TSI.h  cvt.h  glyf.h  hdmx.h  hhea.h  meta.h  name.h  otl.h  table-common.h  vhea.h
incl/otfcc/internal/table/otl/: coverage.h
incl/otfcc/internal/vf/: axis.h  region.h  vq.h  vv.h
include/caryll/: element.h  vector.h
include/otfcc/: glyph-order.h  handle.h  logger.h  options.h  sfnt-builder.h
include/otfcc/table/: BASE.h  COLR.h  GDEF.h  LTSH.h  TSI5.h  VORG.h  cmap.h  fpgm-prep.h  fvar.h  gasp.h  head.h  hmtx.h  maxp.h  otl.h  post.h  table-common.h  vmtx.h
include/otfcc/table/otl/: classdef.h
include/otfcc/vf/: axis.h  region.h  vf.h  vq.h  vv.h
src/bk/: bkblock.h  bkgraph.h
src/consolidate/: consolidate.h
src/consolidate/otl/: common.h
src/font/: caryll-font.c  caryll-sfnt-builder.c  caryll-sfnt.c
src/json-reader/: json-reader.c
src/json-writer/: json-writer.c
src/libcff/: charstring-il.h
src/logger/: logger.c
src/otf-reader/: otf-reader.c  unconsolidate.h
src/otf-writer/: otf-writer.c  stat.h
src/support/: aliases.h  element-impl.h  glyph-order.c  handle.c  options.c  primitives.c  util.h  vector-impl.h
src/support/aglfn/: aglfn.h
src/support/buffer/: buffer.c
src/support/json/: json-funcs.h
src/table/: BASE.h  CFF.h  COLR.h  CPAL.h  GDEF.h  LTSH.h  OS_2.h  SVG.h  TSI5.h  VDMX.h  VORG.h  _TSI.h  cmap.h  cvt.h  fpgm-prep.h  fvar.h  gasp.h  glyf.h  hdmx.h  head.h  hhea.h  hmtx.h  maxp.h  meta.h  name.h  otl.h  post.h  vhea.h  vmtx.h
src/table/otl/: classdef.c  coverage.c
src/vf/: axis.c  region.c  vq.c
